# github-user-activity

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rebuild.sh
inc/: application.hpp  githubevent.hpp  githubrequester.hpp  githubresponseparser.hpp  irequester.hpp  requester.hpp
src/: application.cpp  githubrequester.cpp  requester.cpp
